// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AdvancedSearchRow should render default view 1`] = `
<div
  className="columns is-gapless is-mobile is-multiline advancedSearchRow"
>
  <div
    className="column is-3-tablet"
  >
    <SelectField
      autoWidth={false}
      disabled={false}
      fullWidth={true}
      multiple={false}
      onChange={[Function]}
      value="0"
    >
      <MenuItem
        anchorOrigin={
          Object {
            "horizontal": "right",
            "vertical": "top",
          }
        }
        checked={false}
        desktop={false}
        disabled={true}
        focusState="none"
        insetChildren={false}
        key="0"
        primaryText="Select a field"
        targetOrigin={
          Object {
            "horizontal": "left",
            "vertical": "top",
          }
        }
        value="0"
      />
      <MenuItem
        anchorOrigin={
          Object {
            "horizontal": "right",
            "vertical": "top",
          }
        }
        checked={false}
        desktop={false}
        disabled={false}
        focusState="none"
        insetChildren={false}
        key="all"
        primaryText="Any field"
        targetOrigin={
          Object {
            "horizontal": "left",
            "vertical": "top",
          }
        }
        value="all"
      />
      <MenuItem
        anchorOrigin={
          Object {
            "horizontal": "right",
            "vertical": "top",
          }
        }
        checked={false}
        desktop={false}
        disabled={false}
        focusState="none"
        insetChildren={false}
        key="rek_title"
        primaryText="Title"
        targetOrigin={
          Object {
            "horizontal": "left",
            "vertical": "top",
          }
        }
        value="rek_title"
      />
    </SelectField>
  </div>
  <div
    className="column is-narrow spacer"
  />
  <div
    className="column input is-12-mobile"
  >
    <TextField
      aria-label="Select a field to search on"
      disabled={false}
      errorText={null}
      floatingLabelFixed={false}
      fullWidth={true}
      hintText="Select a field to search on"
      id="searchField"
      multiLine={false}
      name="textSearchField0"
      onChange={[Function]}
      rows={1}
      type="search"
      underlineShow={true}
      value=""
    />
  </div>
</div>
`;

exports[`AdvancedSearchRow should render search field row with given disabled options 1`] = `
<div
  className="columns is-gapless is-mobile is-multiline advancedSearchRow"
>
  <div
    className="column is-3-tablet"
  >
    <SelectField
      autoWidth={false}
      disabled={false}
      fullWidth={true}
      multiple={false}
      onChange={[Function]}
      value="all"
    >
      <MenuItem
        anchorOrigin={
          Object {
            "horizontal": "right",
            "vertical": "top",
          }
        }
        checked={false}
        desktop={false}
        disabled={true}
        focusState="none"
        insetChildren={false}
        key="0"
        primaryText="Select a field"
        targetOrigin={
          Object {
            "horizontal": "left",
            "vertical": "top",
          }
        }
        value="0"
      />
      <MenuItem
        anchorOrigin={
          Object {
            "horizontal": "right",
            "vertical": "top",
          }
        }
        checked={false}
        desktop={false}
        disabled={true}
        focusState="none"
        insetChildren={false}
        key="all"
        primaryText="Any field"
        targetOrigin={
          Object {
            "horizontal": "left",
            "vertical": "top",
          }
        }
        value="all"
      />
      <MenuItem
        anchorOrigin={
          Object {
            "horizontal": "right",
            "vertical": "top",
          }
        }
        checked={false}
        desktop={false}
        disabled={false}
        focusState="none"
        insetChildren={false}
        key="rek_title"
        primaryText="Title"
        targetOrigin={
          Object {
            "horizontal": "left",
            "vertical": "top",
          }
        }
        value="rek_title"
      />
    </SelectField>
  </div>
  <div
    className="column is-narrow combiner"
  >
    <span>
      contains
    </span>
  </div>
  <div
    className="column input is-12-mobile"
  >
    <TextField
      aria-label="Add some text to search all fields with"
      disabled={false}
      errorText={null}
      floatingLabelFixed={false}
      fullWidth={true}
      hintText="Add some text to search all fields with"
      id="searchField"
      multiLine={false}
      name="textSearchField0"
      onChange={[Function]}
      rows={1}
      type="search"
      underlineShow={true}
      value="i feel lucky"
    />
  </div>
</div>
`;

exports[`AdvancedSearchRow should render search field row with select field and search text 1`] = `
<div
  className="columns is-gapless is-mobile is-multiline advancedSearchRow"
>
  <div
    className="column is-3-tablet"
  >
    <SelectField
      autoWidth={false}
      disabled={false}
      fullWidth={true}
      multiple={false}
      onChange={[Function]}
      value="all"
    >
      <MenuItem
        anchorOrigin={
          Object {
            "horizontal": "right",
            "vertical": "top",
          }
        }
        checked={false}
        desktop={false}
        disabled={true}
        focusState="none"
        insetChildren={false}
        key="0"
        primaryText="Select a field"
        targetOrigin={
          Object {
            "horizontal": "left",
            "vertical": "top",
          }
        }
        value="0"
      />
      <MenuItem
        anchorOrigin={
          Object {
            "horizontal": "right",
            "vertical": "top",
          }
        }
        checked={false}
        desktop={false}
        disabled={false}
        focusState="none"
        insetChildren={false}
        key="all"
        primaryText="Any field"
        targetOrigin={
          Object {
            "horizontal": "left",
            "vertical": "top",
          }
        }
        value="all"
      />
      <MenuItem
        anchorOrigin={
          Object {
            "horizontal": "right",
            "vertical": "top",
          }
        }
        checked={false}
        desktop={false}
        disabled={false}
        focusState="none"
        insetChildren={false}
        key="rek_title"
        primaryText="Title"
        targetOrigin={
          Object {
            "horizontal": "left",
            "vertical": "top",
          }
        }
        value="rek_title"
      />
    </SelectField>
  </div>
  <div
    className="column is-narrow combiner"
  >
    <span>
      contains
    </span>
  </div>
  <div
    className="column input is-12-mobile"
  >
    <TextField
      aria-label="Add some text to search all fields with"
      disabled={false}
      errorText={null}
      floatingLabelFixed={false}
      fullWidth={true}
      hintText="Add some text to search all fields with"
      id="searchField"
      multiLine={false}
      name="textSearchField0"
      onChange={[Function]}
      rows={1}
      type="search"
      underlineShow={true}
      value="i feel lucky"
    />
  </div>
</div>
`;
